feat: allow job to be triggered with an HTTP request
externalise schedule parameter

replace timer Camel component with Quartz since the latter is more powerful

remove unused dependencies and application properties

eliminate code smells